--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,7 +21,7 @@ metadata:
   name: webserver-deployment
   anotations:
     fluxcd.io/tag.webserver: semver:~1.0
-    fluxcd.io/automated: ’true’
+    fluxcd.io/automated: "true"
   labels:
     app.kubernetes.io/name: webserver
 spec:
