--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,7 +20,7 @@ kind: Deployment
 metadata:
   name: webserver-deployment
   anotations:
-    fluxcd.io/tag.webserver: semver:~1.0
+    fluxcd.io/tag.webserver: html-server-image:v*
     fluxcd.io/automated: "true"
   labels:
     app.kubernetes.io/name: webserver
