--- a/deployment-1.0.1.yaml
+++ b/deployment-1.0.1.yaml
@@ -16,7 +16,7 @@ spec:
     nodePort: 30007
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: Deployment-new
 metadata:
   name: webserver
   labels:
