--- a/deployment-1.0.2.yaml
+++ b/deployment-1.0.2.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-service
+  namespace: default
 spec:
   type: NodePort
   selector:
@@ -17,6 +18,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: new-webserver
+  namespace: default
   labels:
     app.kubernetes.io/name: webserver
 
